--- a/app/views/education/_symtom1.html.erb
+++ b/app/views/education/_symtom1.html.erb
@@ -73,8 +73,8 @@
                 <h1 style="margin-top: -4vh;color:yellow;font-weighT: 400">Warning!</h1>
                 </div>
                 <div style="height: 4vh;width:50vh;display:Flex;flex-direction:column;align-items:center;margin-bottom:4vh;">   
-                    <h2 class="vene1" style="color:yellow; font-size:2.5vh;font-weight:400">귀두를 젖히고 씌우자!</h2>
-                    <h2 class="vene1" style="color:yellow; font-size:2.8vh;margin-top:-1.5vh;font-weight:400">포경을 안했다면!</h2>
+                    <h2 class="vene1" style="color:yellow; font-size:2.5vh;font-weight:400">귀두를 젖히고 씌워야</h2>
+                    <h2 class="vene1" style="color:yellow; font-size:2.8vh;margin-top:-1.5vh;font-weight:400">포경을 안했다면 귀두를 젖혀야 안찢어진다!</h2>
                     <%# <h2 class="vene1"> ②	포경수술을 안했다면, 귀두부위를 젖힌 다음 콘돔을 씌우자! </h2>
                     <h2 class="vene1"> ③	사정 직전에 분비되는 액에도 정자가 있으니 조심! </h2>
                     <h2 class="vene1"> ④    베이비오일, 바셀린 같은 윤활제는 콘돔을 녹이니 절대 금지!</h2>
@@ -87,8 +87,22 @@
                 <h1 style="margin-top: -4vh;color:yellow;font-weighT: 400">Warning!</h1>
                 </div>
                 <div style="height: 4vh;width:50vh;display:Flex;flex-direction:column;align-items:center;margin-bottom:4vh;">   
-                    <h2 class="vene1" style="color:yellow; font-size:2.5vh;font-weight:400">유통기한 확인 필수</h2>
-                    <h2 class="vene1" style="color:yellow; font-size:2.8vh;margin-top:-1.5vh;font-weight:400">오래된 것은 찢어질 수 있다!</h2>
+                    <h2 class="vene1" style="color:yellow; font-size:2.5vh;font-weight:400">기름 성분이 닿지 않아야</h2>
+                    <h2 class="vene1" style="color:yellow; font-size:2.8vh;margin-top:-1.5vh;font-weight:400">베이비오일, 바셀린은 라텍스를 녹인다! </h2>
+                    <%# <h2 class="vene1"> ②	포경수술을 안했다면, 귀두부위를 젖힌 다음 콘돔을 씌우자! </h2>
+                    <h2 class="vene1"> ③	사정 직전에 분비되는 액에도 정자가 있으니 조심! </h2>
+                    <h2 class="vene1"> ④    베이비오일, 바셀린 같은 윤활제는 콘돔을 녹이니 절대 금지!</h2>
+                    <h2 class="vene1"> ⑤    콘돔도 알러지가 있다! 라텍스 알러지, 윤활액 알러지 확인!</h2> %>
+               </div>
+            </div>
+            <div class="warning">
+                <div>
+                <img src="/assets/warning.svg">
+                <h1 style="margin-top: -4vh;color:yellow;font-weighT: 400">Warning!</h1>
+                </div>
+                <div style="height: 4vh;width70vh;display:Flex;flex-direction:column;align-items:center;margin-bottom:4vh;">   
+                    <h2 class="vene1" style="color:yellow; font-size:2.5vh;font-weight:400">알러지가 있을 수 있어</h2>
+                    <h2 class="vene1" style="color:yellow; font-size:2.8vh;margin-top:-1.5vh;font-weight:400">라텍스 알러지, 윤활액 알러지를 반드시 확인한다!</h2>
                     <%# <h2 class="vene1"> ②	포경수술을 안했다면, 귀두부위를 젖힌 다음 콘돔을 씌우자! </h2>
                     <h2 class="vene1"> ③	사정 직전에 분비되는 액에도 정자가 있으니 조심! </h2>
                     <h2 class="vene1"> ④    베이비오일, 바셀린 같은 윤활제는 콘돔을 녹이니 절대 금지!</h2>
