--- a/app/views/education/_human.html.erb
+++ b/app/views/education/_human.html.erb
@@ -1,4 +1,4 @@
-<div class="vene-first">
+<div class="vene-first" style="width:100vw; height:100vh">
 
 <div class="vene-human">
         <div class='vene-man'>
@@ -14,7 +14,12 @@
             <h2 class="human-text">여자</h2>
         </div>
 </div>
-<div style="width: 100vw;height:100vw;position:relative;">
+<div  style="position:relative;" >
+    <img class="quiz-left" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(90deg);position:absolute;z-index:999;left:5vw;top:18vh;display:none;" onclick="leftMove()">
+    <img class="quiz-right" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(270deg);position:absolute;z-index:999;left: 90vw;top:18vh;" onclick="rightMove()">
+<div class="vene-car" style="display:flex;flex-direction:row;position:absolute;">
+<div style="width: 100vw;height:30vh;position:relative;">
+
 <div class="vene-human-box">
     <div class="vene-human-see">
         <div class="vene-human-see-pic">
@@ -31,7 +36,7 @@
     </div>
 </div>
 </div>
-<div style="width: 100vw;height:100vw;position:relative;">
+<div style="width: 100vw;height:30vh;position:relative;">
 <div class="vene-human-box">
     <div class="vene-human-see">
         <div class="vene-human-see-pic">
@@ -48,7 +53,7 @@
     </div>
 </div>
 </div>
-<div style="width: 100vw;height:100vw;position:relative;">
+<div style="width: 100vw;height:30vh;position:relative;">
 <div class="vene-human-box">
     <div class="vene-human-see">
         <div class="vene-human-see-pic">
@@ -63,6 +68,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 </div>
 </div>
