--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -231,6 +231,7 @@
     flex-direction: column;
     justify-content: center;
     margin-left: 5%;
+    font-size: 0.8rem;
 }
 
 .strength-explain h1 {
