--- a/app/views/education/_reference3.html.erb
+++ b/app/views/education/_reference3.html.erb
@@ -4,14 +4,14 @@
     </div>
 
     <div class="contents">
-        <a href="https://youtu.be/8932LF2TqVE"> <div class="ref-1 grid-item"><img src="">
-        <h2>여성들의 자위는 <br> 나쁜 것인가요?</h2></div> </a>
+        <a href="https://m.blog.naver.com/PostView.nhn?blogId=navi_2be&logNo=220895402219&proxyReferer=https%3A%2F%2Fwww.google.co.kr%2F"> <div class="ref-1 grid-item">
+        <h2>지긋지긋 <br> 생리대에서 탈출하기</h2></div> </a>
 
-        <a href="https://youtu.be/8932LF2TqVE"><div class="ref-2 grid-item"><img src="">
-        <h2>여성들의 자위는 <br> 나쁜 것인가요?</h2></div> </a>
+        <a href="https://m.post.naver.com/viewer/postView.nhn?volumeNo=4485960&memberNo=2993146&vType=VERTICAL"><div class="ref-2 grid-item">
+        <h2>우리 모두가 알아야 하는 <br> 성범죄 대처법</h2></div> </a>
 
-        <a href="https://youtu.be/8932LF2TqVE"> <div class="ref-3 grid-item"><img src="">
-        <h2>여성들의 자위는 <br> 나쁜 것인가요?</h2></div></a>
+        <a href="http://www.cosmopolitan.co.kr/article/RetArticleView.asp?strArtclCd=A000007798&strFCateCd=ADAB">
+        <div class="ref-2 grid-item"><h2>엄마! 난 어떻게<br> 태어났어?</h2></div></a>
     </div>
 
     <div class="bottom">
