--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -96,7 +96,7 @@
         <div id="pin-6" class="airpin">
             <div id="qna"  class="education-main-box">
                <img src="/assets/질문.png">
-            <button>질문하러 가기!</button>   
+            <a href="https://open.kakao.com/o/s2nOBrW"><button>질문하러 가기!</button></a> 
             </div>
         </div>
     </div>
