--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -68,32 +68,26 @@
                 <h1> [ 性 성 성 | 敎 가르칠 교 ] 우리는, 서로가 성에 대해 가르칠 수 있도록 하는 '성교육 플랫폼'입니다!</h1>
             </div>
         </div>
-        <div class="main-3-container-bottom">
+<div class="main-3-container-bottom">
             <div class="main-3-container-bottom-explain">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReed4emzxyQXYOkCqnwnh9GGn-hyY8ogfxZyhlH9FC2a6FAKArMw" alt="">
+                <img src="" alt="">
                 <div class="strength-explain">
-                    <h1>정말 필요한 성지식을 공유</h1>
-                    <h2>청소년부터 성인에 이르기까지, 모두가 필요로 하는 성지식을 제공합니다!</h2>
-                    <h2>청소년부터 성인에 이르기까지, 모두가 필요로 하는 성지식을 제공합니다!</h2>
-                    <h2>청소년부터 성인에 이르기까지, 모두가 필요로 하는 성지식을 제공합니다!</h2>
+                    <h1>노잼 성교육은 안녕!</h1>
+                    <h4>요즘 누가 긴 줄글로 가득한 책 읽니? 내가 궁금한 것만 뽑아서 볼 수 있는 맞춤형 서비스부터 <br> 실생활에서 노출되었던 젠더 경험에 대한 게임 서비스까지! 성교 클라스~~bb</h4>
                 </div>
             </div>
             <div class="main-3-container-bottom-explain">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPRqvQUnNZLk_Il6S1y9xCC7qLD60qAF823b_GPsS13ROdJJcI" alt="">
+                <img src="" alt="">
                 <div class="strength-explain">
-                    <h1>정말 필요로 하는 성지식 공유</h1>
-                    <h2>청소년부터 성인에 이르기까지, 모두가 필요로 하는 성지식을 제공합니다!</h2>
-                    <h2>청소년부터 성인에 이르기까지, 모두가 필요로 하는 성지식을 제공합니다!</h2>
-                    <h2>청소년부터 성인에 이르기까지, 모두가 필요로 하는 성지식을 제공합니다!</h2>
+                    <h1>아니 그래서 어쩌라고? 실질적인 성교육 좀!!</h1>
+                    <h4>정자와 난자의 움직임보다는 나의 성생활이 먼저인데, 정작 내가 궁금한 점에 대한 답은 어디에? <br> 바로 성교에! 피임, 성병, 젠더문제 등 우리가 찾게 되는 성지식만 속속들이 모아져있다구!</h4>
                 </div>
             </div>
             <div class="main-3-container-bottom-explain">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReed4emzxyQXYOkCqnwnh9GGn-hyY8ogfxZyhlH9FC2a6FAKArMw" alt="">
+                <img src="" alt="">
                 <div class="strength-explain">
-                    <h1>정말 필요로 하는 성지식 공유</h1>
-                    <h2>청소년부터 성인에 이르기까지, 모두가 필요로 하는 성지식을 제공합니다!</h2>
-                    <h2>청소년부터 성인에 이르기까지, 모두가 필요로 하는 성지식을 제공합니다!</h2>
-                    <h2>청소년부터 성인에 이르기까지, 모두가 필요로 하는 성지식을 제공합니다!</h2>
+                    <h1>나만 궁금한거 천지야? 다른 사람들의 질문도 궁금해!</h1>
+                    <h4>다들 쉬쉬하니까 내가 물어볼 곳이 없잖아..?ㅠㅠ 상담서비스 말고 다른 사람들의 이야기도 듣고 싶고, 궁금한 것도 편하게 물어보고 싶어! 우리들의 이야기를 해보는거얏!!</h4>
                 </div>
             </div>
         </div>   
