--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -1,29 +1,37 @@
 .reference {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    right: 0;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #1e1e1e;
-    width :80%;
+    width :100%;
     height:100%;
-    position: fixed;
-    margin-left: 20%;
+    margin-left: 10%;
 }
 
 .reference:hover{
     width :100%;
     height:100%;
+    position: fixed;
     background-color: darkgray;
     -webkit-transition: background-color 1000ms linear;
     -ms-transition: background-color 1000ms linear;
     transition: background-color 1000ms linear;
-    position: fixed;
+    margin-left: 10%;
+    top: 0;
+    left: 0;
+    display:flex;
 }
 
 .reference h1 {
+    color:white;
+}
+
+.contents .bottom {
     color:white;
 }
 
