--- a/app/assets/stylesheets/education.scss
+++ b/app/assets/stylesheets/education.scss
@@ -308,6 +308,11 @@
         color: white;
         box-shadow: 1vh 1vh 3vh rgba(39, 39, 39, 0.205);
         cursor: pointer;
+        a {
+            color: #f3b35f;
+            font-size: 3vh;
+            font-weight: 500;
+        }
     }
 }
 
