--- a/app/views/education/_symtom1.html.erb
+++ b/app/views/education/_symtom1.html.erb
@@ -40,10 +40,10 @@
                 <h2 style="font-size: 3.5vh;">사용 순서</h2>
                 <div style="width:7vh;border-bottom:0.2vh solid grey;text-align:center;"></div>
            <div style="width: 95vh;position:relative;overflow:hidden;margin-top: 8vh;border-radius:0.4vh;height: 20vh;">
-           <img class="quiz-left" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(90deg);position:absolute;z-index:999;left:0;top:8vh;display:none;" onclick="leftMove()">
-            <img class="quiz-right" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(270deg);position:absolute;z-index:999;right:0;top:8vh;" onclick="rightMove()">
+           <img class="quiz-left1" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(90deg);position:absolute;z-index:999;left:0;top:8vh;display:none;" onclick="leftMove1()">
+            <img class="quiz-right1" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(270deg);position:absolute;z-index:999;right:0;top:8vh;" onclick="rightMove1()">
 
-           <div style="display:flex;width: 1000vw;position:absolute;" class="gg">
+           <div style="display:flex;width: 1000vw;position:absolute;" class="gg-1">
             <div id= "stage" class="color-blue stage1">
                 <h1 class="vene1">1. 콘돔을 뜯는다!</h2>
                 <h2 class="vene1">반드시 손으로 뜯을 것</h2>
@@ -71,16 +71,14 @@
                 <h3 class="vene1">정액이 콘돔과 성기 사이로 흘러나올 수 있다!</h2>
                
             </div>
-
-
             </div>
         </div>
             <h2 style="font-size: 3.5vh;margin-top:5vh;">주 의 사 항</h2>
             <div style="width:7vh;border-bottom:0.2vh solid grey;text-align:center;"></div>
-           <div style="width: 95vh;position:relative;overflow:hidden;margin-top: 8vh;border-radius:0.4vh;height: 40vh;">
-           <img class="quiz-left1" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(90deg);position:absolute;z-index:999;left:0;top:18vh;display:none;" onclick="leftMove()">
-            <img class="quiz-right1" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(270deg);position:absolute;z-index:999;right:0;top:18vh;" onclick="rightMove()">
-            <div style="display:flex;width: 1000vw;position:absolute;" class="gg1">
+           <div style="width: 95vh;position:relative;overflow:hidden;margin-top: 8vh;border-radius:0.4vh;height: 40vh;margin-bottom:6vh;">
+           <img class="quiz-left" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(90deg);position:absolute;z-index:999;left:0;top:18vh;display:none;" onclick="leftMove()">
+            <img class="quiz-right" src="/assets/arrow3.svg" style="width:5vh;height:5vh;transform:rotate(270deg);position:absolute;z-index:999;right:0;top:18vh;" onclick="rightMove()">
+            <div style="display:flex;width: 1000vw;position:absolute;" class="gg">
             <div class="warning">
                 <div>
                 <img src="/assets/warning.svg">
