--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -84,7 +84,7 @@
          <div id="pin-4" class="airpin">
             <div id="media"  class="education-main-box">
                 <img src="/assets/미디어1.png">
-                <button>미디어 파헤치기!</button>
+                 <a href="/education/genderequality"> <button>미디어 파헤치기!</button></a>
             </div>
         </div>
         <div id="pin-5" class="airpin">
