--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -228,6 +228,7 @@
 .yes {
     background-color: rgb(252, 91, 86);
     color: white;
+    cursor: pointer;
 }
 
 .yes h2 {
@@ -243,6 +244,7 @@
 .no {
     background-color:  blueviolet;
     color: rgb(11, 114, 11);
+    cursor: pointer;
 }
 
 .no h2 {
