--- a/app/views/home/quiz.html.erb
+++ b/app/views/home/quiz.html.erb
@@ -40,11 +40,11 @@
                      <%end%>
                 </div>
                 <div class="quiz-2-container-answer">
-                    <div class="yes">
+                    <div class="yes" onclick="rightMove()">
                         <h2>Yes!</h2>
                         <h3>100% 맞다!</h3>
                     </div>
-                    <div class="no">
+                    <div class="no" onclick="rightMove()">
                         <h2>No!</h2>
                         <h3>100%는 아니다!</h3>
                     </div>
