--- a/app/views/education/_reference3.html.erb
+++ b/app/views/education/_reference3.html.erb
@@ -11,7 +11,7 @@
         <h2>우리 모두가 알아야 하는 <br> 성범죄 대처법</h2></div> </a>
 
         <a href="http://www.cosmopolitan.co.kr/article/RetArticleView.asp?strArtclCd=A000007798&strFCateCd=ADAB">
-        <div class="ref-2 grid-item"><h2>엄마! 난 어떻게<br> 태어났어?</h2></div></a>
+        <h2>엄마! 난 어떻게<br> 태어났어?</h2></div></a>
     </div>
 
     <div class="bottom">
