--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -90,7 +90,7 @@
         <div id="pin-5" class="airpin">
             <div id="reference"  class="education-main-box">
                 <img src="/assets/미디어.png">
-                <button><%=link_to "구경거리 보러가기!", education_reference2_path, remote:true %></button>
+                <%=link_to "구경거리 보러가기!", education_reference2_path, remote:true %></button>
             </div>
         </div>
         <div id="pin-6" class="airpin">
