--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -217,6 +217,7 @@
 
 .main-3-container-bottom-explain {
     display: flex;
+    width: 100%;
     margin-top: 15px;
     margin-bottom: 15px;
 }
@@ -228,6 +229,7 @@
 
 .strength-explain {
     display: flex;
+    width: 80%;
     flex-direction: column;
     justify-content: center;
     margin-left: 5%;
