--- a/app/views/home/quiz.html.erb
+++ b/app/views/home/quiz.html.erb
@@ -59,6 +59,9 @@
                 </div>
                     <h2 id="answeris" style="margin-top:2vw"> 결과 </h2>
                 </div>
+                <button class="yes">
+                  <h2><a href="/education/index" class="button" style="color: white">교육 받으러 가기</a></h2>
+                </button>
             </div>
         </div>
         </div>
