--- a/app/views/education/_symtom1.html.erb
+++ b/app/views/education/_symtom1.html.erb
@@ -365,7 +365,7 @@
             <div class="vene-bottom-box" style="width:100%;display:Flex;flex-direction:column;align-items:center;">
                 <div style="display:Flex;align-items:center;width:100%;display:flex;justify-content:flex-start;margin-bottom:4vh;">
                     <div class="vene-box-img" style="margin-right: 8vh;margin-left:20vh;">
-                    <img src="/assets/DMPA.gif" style="height: 17vh; width: 25vh">
+                    <img src="/assets/임플라논.jpeg" style="height: 17vh; width: 25vh">
                     </div>
                     <div class="title">
                     <h1 class="vene3" style="font-size: 5vh">임플라논(피하 이식장치)</h1>
