--- a/app/views/counsel/index.html.erb
+++ b/app/views/counsel/index.html.erb
@@ -41,3 +41,6 @@
   })();
 </script>
 <!-- End Channel Plugin -->
+<div style="width:100vh;height:100vw;">
+<img src="whale1.svg" style="width: 40vh; height: 40vh;">
+</div>
