--- a/app/views/education/_reference3.html.erb
+++ b/app/views/education/_reference3.html.erb
@@ -1,4 +1,4 @@
-<div class="reference">
+<%# <div class="reference">
     <div class="title">
         <h1>8월의 추천 콘텐츠</h1>
     </div>
@@ -17,4 +17,4 @@
     <div class="bottom">
         <p>이 달의 추천 콘텐츠는 [성교]의 자체 알고리즘을 통해 엄선된 자료입니다.
         <br>실질적인 성교육을 위한 추가 자료로 활용하기에 아주 적합합니다.</p>
-</div>
+</div> %>
