--- a/app/views/counsel/index.html.erb
+++ b/app/views/counsel/index.html.erb
@@ -1,3 +1,4 @@
+<%=image_tag("counsel.png", {:style=> "width:100%; height:100%;"}) %>
 <!-- Channel Plugin Scripts -->
 <script>
   ;window.channelPluginSettings = {
@@ -41,3 +42,4 @@
   })();
 </script>
 <!-- End Channel Plugin -->
+
