--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,12 +3,7 @@
 
   $("body").css({"background-color": "rgb(100, 33, 33)"});
 
-
-
-</script>
-
-
-      <%# var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
       var labelIndex = 0;
 
       function initialize() {
@@ -38,7 +33,12 @@
         });
       }
 
-      google.maps.event.addDomListener(window, 'load', initialize); %>
+      google.maps.event.addDomListener(window, 'load', initialize);
+
+</script>
+
+
+      <%#  %>
 
 
 
